# azureblob-to-azureblob

./: .gitignore  Dockerfile  README.md  app.py  kustomization.yaml  pyproject.toml  settings.py
.github/workflows/: ci.yaml
app/: cli.py  main.py  settings.py
deploy/: cronjob.yaml
